# ASample_Vulchecker_dataset

./: bash.sh  shellScrip_demo_CWE190.sh
cmake_project_CWE121/: CMakeLists.txt  demo-121-preds.csv  labels.json
cmake_project_CWE121/hector_build/: %2Fhome%2Fvulchecker%2Fcmake_project_CWE121%2Fsrc%2Fgood.cpp-allow_optimization.ll  %2Fhome%2Fvulchecker%2Fcmake_project_CWE121%2Fsrc%2Fgood.cpp-combine_ll.ll  %2Fhome%2Fvulchecker%2Fcmake_project_CWE121%2Fsrc%2Fgood.cpp-opt_globaldce.ll  %2Fhome%2Fvulchecker%2Fcmake_project_CWE121%2Fsrc%2Fgood.cpp-opt_indirectbr.ll  .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  feature_stats.npz  good  good-allow_optimization.ll  good-combine_ll.ll  good-opt_globaldce.ll  good-opt_indirectbr.ll  hector-121-preproc.json  hector-121-preproc.json.cache.pkl  hector-121.json  hector.ninja
cmake_project_CWE121/hector_build/CWE121/: aux.pkl  model_model_0.4921.pt
cmake_project_CWE121/hector_build/src/: good.ll  good.ll.d
cmake_project_CWE121/src/: bad.cpp  good.cpp
cmake_project_CWE190/: CMakeLists.txt  demo-190-preds.csv  labels.json  output
cmake_project_CWE190/hector_build/: %2Fhome%2Fvulchecker%2Fcmake_project_CWE190%2Fsrc%2Fbad.cpp-allow_optimization.ll  %2Fhome%2Fvulchecker%2Fcmake_project_CWE190%2Fsrc%2Fbad.cpp-combine_ll.ll  %2Fhome%2Fvulchecker%2Fcmake_project_CWE190%2Fsrc%2Fbad.cpp-opt_globaldce.ll  %2Fhome%2Fvulchecker%2Fcmake_project_CWE190%2Fsrc%2Fbad.cpp-opt_indirectbr.ll  .ninja_deps  .ninja_log  CMakeCache.txt  bad  build.ninja  good  (+12 more)
cmake_project_CWE415/: demo-415-preds.csv  labels.json
(+32 files in other folders)
